--- a/index.css
+++ b/index.css
@@ -1,226 +1,9 @@
-.feld {
+#cur_board{
     position: absolute;
-    top: 0px;
-    left: 0px;
-    background-color: var(--color-black);
-    width: 1920px;
-    height: 1080px;
-}
-.men1 {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    border-radius: 0px 0px var(--br-xs) var(--br-xs);
-    background-color: var(--color-white);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 169px;
-    height: 59px;
-}
-.men2 {
-    position: absolute;
-    top: 12px;
-    left: 35px;
-    text-shadow: 1px 0 0 #000, 0 1px 0 #000, -1px 0 0 #000, 0 -1px 0 #000;
-}
-.men {
-    position: absolute;
-    top: 0px;
-    left: 1530px;
-    width: 169px;
-    height: 59px;
-}
-.s1 {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    background-color: var(--color-gray);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 164.4px;
-    height: 164.4px;
-}
-.s2 {
-    position: absolute;
-    top: 0px;
-    left: 164.4px;
-    background-color: var(--color-darkgray);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 164.4px;
-    height: 164.4px;
-}
-.s3 {
-    position: absolute;
-    top: 0px;
-    left: 328.8px;
-    background-color: var(--color-gray);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 164.4px;
-    height: 164.4px;
-}
-.s4 {
-    position: absolute;
-    top: 0px;
-    left: 493.2px;
-    background-color: var(--color-darkgray);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 164.4px;
-    height: 164.4px;
-}
-.s5 {
-    position: absolute;
-    top: 0px;
-    left: 657.6px;
-    background-color: var(--color-gray);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 164.4px;
-    height: 164.4px;
-}
-.s6 {
-    position: absolute;
-    top: 0px;
-    left: 822px;
-    background-color: var(--color-darkgray);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 164.4px;
-    height: 164.4px;
-}
-.s7 {
-    position: absolute;
-    top: 0px;
-    left: 986.4px;
-    background-color: var(--color-gray);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 164.4px;
-    height: 164.4px;
-}
-.s8 {
-    position: absolute;
-    top: 0px;
-    left: 1150.8px;
-    background-color: var(--color-darkgray);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 164.4px;
-    height: 164.4px;
-}
-.s9 {
-    position: absolute;
-    top: 0px;
-    left: 1315.2px;
-    background-color: var(--color-gray);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 164.4px;
-    height: 164.4px;
-}
-.reihe1 {
-    position: absolute;
-    top: 657.6px;
-    left: 0px;
-    width: 1479.6px;
-    height: 164.4px;
-}
-.reihe2 {
-    position: absolute;
-    top: 493.2px;
-    left: 0px;
-    width: 1479.6px;
-    height: 164.4px;
-}
-.reihe3 {
-    position: absolute;
-    top: 328.8px;
-    left: 0px;
-    width: 1479.6px;
-    height: 164.4px;
-}
-.reihe4 {
-    position: absolute;
-    top: 164.4px;
-    left: 0px;
-    width: 1479.6px;
-    height: 164.4px;
-}
-.reihe5 {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 1479.6px;
-    height: 164.4px;
-}
-.felder {
-    position: absolute;
-    top: 188px;
-    left: 220px;
-    width: 1479.6px;
-    height: 822px;
-}
-.inventar1 {
-    position: absolute;
-    top: -3px;
-    left: -3px;
-    border-radius: var(--br-xs);
-    background-color: var(--color-white);
-    border: 3px solid var(--color-black);
-    box-sizing: border-box;
-    width: 766px;
-    height: 147px;
-}
-.inventar-child {
-    position: absolute;
-    top: -3px;
-    left: 99px;
-    border-radius: 0px var(--br-xs) var(--br-xs) 0px;
-    background-color: var(--color-white);
-    border: 3px solid var(--color-black);
-    box-sizing: border-box;
-    width: 664px;
-    height: 147px;
-}
-.inventar-item {
-    position: absolute;
-    top: 40px;
-    left: 20px;
-    border-radius: 50%;
-    background-color: var(--color-white);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 60px;
-    height: 60px;
-}
-.inventar-inner {
-    position: absolute;
-    top: 100px;
-    left: 12px;
-    background-color: var(--color-white);
-    border: 1px solid var(--color-black);
-    box-sizing: border-box;
-    width: 76px;
-    height: 27px;
-}
-.inventar {
-    position: absolute;
-    top: 19px;
-    left: 25px;
-    width: 760px;
-    height: 141px;
-}
-.desktop-1 {
-    width: 100%;
-    position: relative;
-    background-color: var(--color-black);
-    height: 1080px;
-    overflow: hidden;
-    text-align: left;
-    font-size: 32px;
-    color: var(--color-gray);
-    font-family: var(--font-soloist);
-}
+    margin-left: 228px;
+    margin-top: 65px;
+    font-family: "Roboto", serif;
+    font-size: 25px;
+    user-select: none;
 
+}
